Fix alignment of username and "Reply to" in InReplyTo component
CORL-629

--- a/src/core/client/admin/components/ModerateCard/InReplyTo.css
+++ b/src/core/client/admin/components/ModerateCard/InReplyTo.css
@@ -10,4 +10,5 @@
 
 .usernameButton {
   display: inline-flex;
+  vertical-align: baseline;
 }
